--- a/public/styles/b-ext-style.css
+++ b/public/styles/b-ext-style.css
@@ -1,45 +1,45 @@
 ._actvrmenu {
-  background: #E2F2FF;
-    border-radius: 5px;
-    border-top: 1px solid #E6E8E9;
-    border: 0;
-    color: #202020;
-    display: flex;
-    float: left;
-    font-family: 'Poppins', sans-serif !important;
-    font-size: 14px;
-    font-weight: 500;
-    list-style: none;
-    margin: 0 2px;
-    outline: 0;
-    padding: 6px 10px;
-    position: relative;
-    text-decoration: none  !important;
-    width: 100%;
-align-items: center;
-border-bottom: 1px solid #E6E8E9;
+  background: #e2f2ff;
+  border-radius: 5px;
+  border-top: 1px solid #e6e8e9;
+  border: 0;
+  color: #202020;
+  display: flex;
+  float: left;
+  font-family: "Poppins", sans-serif !important;
+  font-size: 14px;
+  font-weight: 500;
+  list-style: none;
+  margin: 0 2px;
+  outline: 0;
+  padding: 6px 10px;
+  position: relative;
+  text-decoration: none !important;
+  width: 100%;
+  align-items: center;
+  border-bottom: 1px solid #e6e8e9;
 }
 
 .meuicowidth.flightmenuico {
-    background-repeat: no-repeat !important;
-    background: url(../images/flight.png);
-    background-size: contain;
-    height: 40px;
-    margin-right: 6px;
-    margin: auto;
-    min-width: 30px;
-    width: 40px;
+  background-repeat: no-repeat !important;
+  background: url(../images/flight.png);
+  background-size: contain;
+  height: 40px;
+  margin-right: 6px;
+  margin: auto;
+  min-width: 30px;
+  width: 40px;
 }
 
 .meuicowidth.hotelmenuico {
-    background-repeat: no-repeat !important;
-    background: url(../images/hotel.png);
-    background-size: contain;
-    width: 40px;
-    height: 40px;
-    margin-right: 6px;
-    margin: auto;
-    min-width: 30px;
+  background-repeat: no-repeat !important;
+  background: url(../images/hotel.png);
+  background-size: contain;
+  width: 40px;
+  height: 40px;
+  margin-right: 6px;
+  margin: auto;
+  min-width: 30px;
 }
 
 .meuicowidth.fphmenuico {
@@ -148,3 +148,14 @@ border-bottom: 1px solid #E6E8E9;
   width: 40px;
 }
 
+/* EXCLUSIVE OFFERS */
+
+.carousel-inner {
+  height: 400px;
+  background-color: black;
+}
+
+.carousel-item > img {
+  height: 400px;
+  object-fit: contain;
+}
