--- a/public/styles/b-ext-style.css
+++ b/public/styles/b-ext-style.css
@@ -210,26 +210,119 @@
 /* FAMOUS TOURIST ATTRACTION */
 
 #fam-tour-attra > div:nth-child(2) > div.col-10 > div {
-height: auto;
-flex-flow: row wrap;
+  height: auto;
+  flex-flow: row wrap;
 }
 
 #fam-tour-attra > div:nth-child(2) > div.col-10 > div > div {
-height: 140px;
-width: 180px;
+  height: 140px;
+  width: 180px;
 }
 
-
 #fam-tour-attra > div:nth-child(2) > div.col-10 > div > div > img {
-height: 80px;
-object-fit: contain;
+  height: 80px;
+  object-fit: contain;
 }
 
 #fam-tour-attra > div:nth-child(2) > div.col-10 > div > div > div {
-width: 100%;
+  width: 100%;
 }
 
+/* TRAVEL BLOGS */
 
+.card {
+  position: relative;
+}
 
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black overlay */
+  border-radius: 20px;
+  z-index: 20;
+}
 
+#travel-vlogs > div:nth-child(2) > div.col-10 > div {
+  display: flex;
+  flex-flow: row wrap;
+}
 
+#travel-vlogs > div:nth-child(2) > div.col-10 > div > div {
+  width: 260px;
+  height: 220px;
+  border-radius: 20px;
+}
+
+#travel-vlogs > div:nth-child(2) > div.col-10 > div > div > img {
+  border-radius: 20px;
+  z-index: 0;
+}
+
+#travel-vlogs > div:nth-child(2) > div.col-10 > div > div > div > div > div {
+  position: relative;
+}
+
+.card-img-overlay {
+  z-index: 500;
+}
+
+._blr_url {
+  display: inline;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0 0 15px 15px;
+  background: transparent;
+  color: #fff;
+  font-size: 14px;
+  padding: 12px 15px;
+  width: 100%;
+  z-index: 1000;
+}
+
+/* Create the arrow shape */
+._blr_url::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 8px 0 8px 8px;
+  border-color: transparent transparent transparent #fff; /* Arrow color */
+}
+
+#travel-vlogs > div:nth-child(2) > div.col-10 > div > div > div > div > h5 {
+  margin-top: 40px;
+}
+
+#travel-vlogs
+  > div:nth-child(2)
+  > div.col-10
+  > div
+  > div:nth-child(2)
+  > div
+  > div
+  > h5 {
+  margin-top: 10px;
+}
+
+#travel-vlogs
+  > div:nth-child(2)
+  > div.col-10
+  > div
+  > div:nth-child(3)
+  > div.card-img-overlay
+  > div
+  > h5 {
+  margin-top: 10px;
+}
+
+#travel-vlogs > div.row.d-flex.justify-content-center.my-4 > a {
+  width: 150px;
+}
