--- a/public/styles/b-ext-style.css
+++ b/public/styles/b-ext-style.css
@@ -341,4 +341,9 @@ height: 80px;
   width: 100%;
 }
 
+/* SEARCH FLIGHTS, HOTELS, BUS */
+
+#flights-hotels-bus > div.row.m-5 > p {
+text-align: justify;
+}
 
