Fix Exclusive Offers

--- a/public/styles/b-ext-style.css
+++ b/public/styles/b-ext-style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 ._actvrmenu {
   background: #e2f2ff;
   border-radius: 5px;
@@ -149,6 +153,13 @@
 }
 
 /* EXCLUSIVE OFFERS */
+.carousel {
+  display: none; /* Hide all carousels by default */
+}
+
+.active-carousel {
+  display: block; /* Display active carousel */
+}
 
 .carousel-inner {
   height: 400px;
@@ -159,6 +170,12 @@
   height: 400px;
   object-fit: contain;
 }
+
+#exc-offers > div.row.p-4.d-flex.justify-content-center.align-items-center > a {
+width: 200px;
+}
+
+
 
 /* TOP FLIGHT ROUTES */
 
@@ -334,7 +351,7 @@
 }
 
 #book-with-us > div:nth-child(2) > div.col-10 > div > div > div > img {
-height: 80px;
+  height: 80px;
 }
 
 #book-with-us > div:nth-child(2) > div.col-10 > div > div > div > div {
@@ -344,6 +361,172 @@ height: 80px;
 /* SEARCH FLIGHTS, HOTELS, BUS */
 
 #flights-hotels-bus > div.row.m-5 > p {
+  text-align: justify;
+}
+
+/* FOOTER */
+
+.toggle-content {
+  display: none;
+}
+
+body > footer {
+  background-color: black;
+  color: white;
+}
+
+#list-tab {
+/* width: 200px; */
+flex-shrink: 0;
+}
+
+#list-our-offerings > div.row.mt-4, #list-quick-links > div.row.mt-4, #list-pop-dest > div.row.mt-4, #list-int-dest > div.row.mt-4, #list-pop-air > div.row.mt-4, #list-connect-with > div.row.mt-4, #list-connect-with > div.row.mt-5, #list-offers > div.row.mt-4, #list-emt > div.row.mt-4, #list-media > div.row.mt-4, #list-media > div.row.mt-3 {
+margin-left: 10px;
+}
+
+#list-our-offerings > div.row.mt-3 > ul, #list-quick-links > div.row.mt-3 > ul, #list-pop-dest > div.row.mt-3 > ul, #list-int-dest > div.row.mt-3 > ul, #list-pop-air > div.row.mt-3 > ul, #list-connect-with > div.row.mt-3 > ul, #list-offers > div.row.mt-3 > ul, #list-emt > div.row.mt-3 > ul {
+  list-style-type: none;
+ /*  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: start; */
+}
+
+#list-our-offerings > div.row.mt-3 > ul > li > a, #list-quick-links > div.row.mt-3 > ul > li > a, #list-pop-dest > div.row.mt-3 > ul > li > a, #list-int-dest > div.row.mt-3 > ul > li > a, #list-pop-air > div.row.mt-3 > ul > li > a, #list-connect-with > div.row.mt-3 > ul > li > a, #list-offers > div.row.mt-3 > ul > li > a, #list-emt > div.row.mt-3 > ul > li > a, #list-media > div.row.mt-3 > div > div.menulinkx2_cnt > a  {
+  color: white;
+  text-decoration: none;
+  list-style-type: none;
+  margin: 20px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+#list-media > div.row.mt-3 > div > div.menulinkx2_cnt > a {
+  margin: 0px;
+}
+
+.menulinkx2_cnt {
+  width: 22%;
+}
+
+#list-media > div.row.mt-3 > div > div.medi_cnt_mn > div > div > i {
+  margin-top: 4px;
+margin-right: 6px;
+}
+
+.nwHdr {
+  font-size: 16px;
+  font-weight: 500;
+  width: 100%;
+  display: block;
+  padding: 0;
+}
+
+#list-media > div.row.mt-3 > div > div.medi_cnt_mn > div > div > p > a {
+  color: #2196f3;
+text-decoration: none;
+}
+
+#list-our-offerings > div.row.mt-3 > ul > li {
+  width: 165px;
+}
+
+#list-quick-links > div.row.mt-3 > ul > li {
+  width: 290px;
+}
+
+#list-pop-dest > div.row.mt-3 > ul > li {
+  width: 150px;
+}
+
+#list-int-dest > div.row.mt-3 > ul > li {
+  width: 100px;
+}
+
+#list-pop-air > div.row.mt-3 > ul > li {
+  width: 160px;
+}
+
+#list-connect-with > div.row.mt-3 > ul > li {
+  width: 160px;
+  margin: 10px;
+}
+
+#list-offers > div.row.mt-3 > ul > li {
+  width: 160px;
+}
+
+#list-emt > div.row.mt-3 > ul > li {
+  width: 190px;
+}
+
+#list-tab > button {
+flex-shrink: 0;
+}
+
+#list-connect-with > div.row.mt-3 > ul > li > a > img {
+width: 40px;
+}
+
+#list-connect-with > div.row.mt-5 > div > div:nth-child(1) {
+  width: 400px;
+}
+
+.content_newsletter {
+width: 398px;
+height: 92px;
+}
+
+#list-connect-with > div.row.mt-5 > div > div.content_newsletter > form {
+position: relative;
+width: 100%;
+}
+
+#txtsubEmail {
+  width: 80%;
+  border: 1px;
+}
+
+#list-connect-with > div.row.mt-5 > div > div.content_newsletter > form > button {
+position: absolute;
+right: 0;
+top: 0;
+z-index: 10;
+margin-right: 0px;
+width: 140px;
+}
+
+body > footer > div:nth-child(2) > div.col-xl-7.col-lg-7.col-md-7.col-sm-12.col-12 > img {
+width: 192px;
+}
+
+body > footer > div.row.mt-4 > div.col-xl-3.col-lg-3.col-md-3.col-sm-12.col-12 > div > div.appicon.ftnew.d-flex.justify-content-evenly.align-items-center {
+  width: 100%;
+}
+
+body > footer > div:nth-child(2) > div.col-xl-3.col-lg-3.col-md-3.col-sm-12.col-12 > div > div.appicon.ftnew > div:nth-child(1) > a > img, body > footer > div:nth-child(2) > div.col-xl-3.col-lg-3.col-md-3.col-sm-12.col-12 > div > div.appicon.ftnew > div:nth-child(2) > a > img {
+  width: 100%;
+  flex-grow: 1;
+}
+
+body > footer > div:nth-child(2) > div.col-xl-2.col-lg-2.col-md-2.col-sm-12.col-12 > div > div.qrnewft > div > img {
+  width: 84px;
+}
+
+body > footer > div.row.mt-4 > div.col-xl-7.col-lg-7.col-md-7.col-sm-12.col-12.ms-5 > p {
 text-align: justify;
 }
+
+body > footer > div:nth-child(3) > div > div.ndertimhgt {
+  width: 42%;
+  margin-left: auto;
+  padding: 0 20px;
+}
+
+body > footer > div:nth-child(3) > div > div.ndertimhgt > img {
+  width: 100%;
+  flex-grow: 1;
+}
+
+
 
