--- a/public/styles/b-ext-style.css
+++ b/public/styles/b-ext-style.css
@@ -179,6 +179,12 @@ padding: 10px;
   width: auto;
 }
 
+#header > div.row.d-flex.justify-content-center.align-items-center.my-4 > div > div:nth-child(1) > div > button, #header > div.row.d-flex.justify-content-center.align-items-center.my-4 > div > div:nth-child(2) > div > button {
+background-color: green;
+}
+
+
+
 #header > div:nth-child(2) > div > div:nth-child(1),
 #header > div:nth-child(2) > div > div:nth-child(2) {
   /* width: 250px; */
